--- a/apache.yml
+++ b/apache.yml
@@ -4,21 +4,21 @@
 #  vars_files:
 #    - "{{ ansible_os_family }}.yml"
 
-  tasks:
-    - name: Include OS-Specific
-      include_vars: "{{ ansible_os_family }}.yml"
+#  tasks:
+#    - name: Include OS-Specific
+#      include_vars: "{{ ansible_os_family }}.yml"
 ##  
 ##Fichiers Debian.yml et RedHat.yml créés de côté
 ## Variables apache_user et apache_pkg déclarés dedans
 
     - name: Install Apache
       package:
-        name: "{{ apache_pkg }}"
+        name: httpd
         state: latest
 
     - name: Vérification service Apache
       service:
-        name: "{{ apache_pkg }}"
+        name: httpd
         state: started
 
     - name: Copie de index.html
@@ -26,6 +26,6 @@
         src: index.html
         dest: /var/www/html/
         mode: '0644'
-        owner: "{{ apache_user }}"
-        group: "{{ apache_user }}"
+        owner: "apache"
+        group: "apache"
 ~                                    
