--- a/apache.yml
+++ b/apache.yml
@@ -1,31 +1,30 @@
----
 - name: Installation d'Apache sur Web
   hosts: web
   become: yes
 #  vars_files:
 #    - "{{ ansible_os_family }}.yml"
 
-#  tasks:
+  tasks:
 #    - name: Include OS-Specific
 #      include_vars: "{{ ansible_os_family }}.yml"
 ##  
 ##Fichiers Debian.yml et RedHat.yml créés de côté
 ## Variables apache_user et apache_pkg déclarés dedans
 
-- name: Install Apache
-  package:
-    name: httpd
-    state: latest
+    - name: Install Apache
+      package:
+        name: httpd
+        state: latest
 
-- name: Vérification service Apache
-  service:
-    name: httpd
-    state: started
+    - name: Vérification service Apache
+      service:
+        name: httpd
+        state: started
 
-- name: Copie de index.html
-  copy:
-    src: index.html
-    dest: /var/www/html/
-    mode: '0644'
-    owner: "apache"
-    group: "apache"
+    - name: Copie de index.html
+      copy:
+        src: index.html
+        dest: /var/www/html/
+        mode: '0644'
+        owner: "apache"
+        group: "apache"
