--- a/deploy.yml
+++ b/deploy.yml
@@ -1,13 +1,13 @@
 - name: Installation d'Apache sur Web
   hosts: web
   become: yes
-#  vars_files:
-#    - "{{ ansible_os_family }}.yml"
+  vars_files:
+    - "{{ ansible_os_family }}.yml"
 
   tasks:
-#    - name: Include OS-Specific
-#      include_vars: "{{ ansible_os_family }}.yml"
-##  
+    - name: Include OS-Specific
+      include_vars: "{{ ansible_os_family }}.yml"
+  
 ##Fichiers Debian.yml et RedHat.yml créés de côté
 ## Variables apache_user et apache_pkg déclarés dedans
 
@@ -18,7 +18,7 @@
 
     - name: Vérification service Apache
       service:
-        name: httpd
+        name: "{{ apache_pkg }}"
         state: started
 
     - name: Copie de index.html
@@ -26,5 +26,5 @@
         src: index.html
         dest: /var/www/html/
         mode: '0644'
-        owner: "apache"
-        group: "apache"
+        owner: "{{ apache_pkg }}"
+        group: "{{ apache_grp }}"
