--- a/deploy.yml
+++ b/deploy.yml
@@ -26,5 +26,5 @@
         src: index.html
         dest: /var/www/html/
         mode: '0644'
-        owner: "{{ apache_pkg }}"
+        owner: "{{ apache_user }}"
         group: "{{ apache_grp }}"
